--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-8 text-center">
                 <img src="assets/img/logo-maintenance.png" alt="" width="300">
-              <h2>Há mais de 40 anos a sua melhor pedalada é a nossa satisfação</h2>
+              <!-- <h2>Há mais de 40 anos a sua melhor pedalada é a nossa satisfação</h2> -->
               <h3>Nosso site está em construção, aguarde novidades!</h3>
               <a href="https://wa.me/5551980196163" target="_blank" class="btn-get-started"><i class="bi bi-whatsapp"></i> Fale conosco!</a>
             </div>
