--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn" href="https://wa.me/5551980196163" style="background-color:#21B859;font-weight: 700; font-size: 17px;"><i class="bi bi-whatsapp"></i> (51)98019.6163</a>
+      <a class="cta-btn" href="https://wa.me/5551980196163" target="_blank" style="background-color:#21B859;font-weight: 700; font-size: 17px;"><i class="bi bi-whatsapp"></i> (51)98019.6163</a>
 
     </div>
   </header>
