--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
-      <a href="/" class="logo d-flex align-items-center me-auto me-xl-0" style="width: 100px;">
+      <a href="https://www.pacbikes.com.br/" class="logo d-flex align-items-center me-auto me-xl-0" style="width: 100px;">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo.png" alt="">
         <!-- <h1 class="sitename">Strive</h1><span>.</span> -->
