--- a/index.html
+++ b/index.html
@@ -487,13 +487,13 @@
     
             <div class="row align-items-center">
     
-              <div class="col-lg-6" data-aos="fade-left" data-aos-delay="300">
+              <div class="col-lg-6 order-2 order-lg-1" data-aos="fade-left" data-aos-delay="300">
                 <div class="containerx text-center" data-aos="fade-up" data-aos-delay="100">
                   <img class="img-fluid" src="assets/img/hand-smartphone1.jpg" >
                 </div>   
               </div>
 
-              <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
+              <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-right" data-aos-delay="200">
                 <div class="cta-content">
                   <h2>Não fique de fora!</h2>
                   <p class="lead">Acompanhe nossas redes sociais e esteja sempre atualizado sobre promoções, lançamentos e tendências. Conecte-se conosco e descubra em primeira mão tudo o que preparamos para quem curte bike!</p>
