--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>PAC-Bikes - Loja & Serviços</title>
-  <meta name="description" content="">
+  <title>PAC Bikes | Bicicletas, Peças e Manutenção em Taquari-RS</title>
+  <meta name="description" content="A PAC Bikes oferece bicicletas novas e usadas, peças, acessórios e serviços completos de montagem, regulagem e manutenção em Taquari-RS. Desde 1982, somos referência em qualidade, confiança e atendimento ao ciclista.">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
@@ -35,6 +35,28 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BicycleStore",
+  "name": "PAC Bikes",
+  "image": "https://www.pacbikes.com.br/assets/img/logo.png",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Rodovia Aleixo Rocha da Silva 280",
+    "addressLocality": "Taquari",
+    "addressRegion": "RS",
+    "addressCountry": "BR"
+  },
+  "telephone": "+55 51 98019-6163",
+  "url": "https://www.pacbikes.com.br",
+  "openingHours": "Mo-Fr 08:00-11:30, 13:30-18:00, Sa 08:00-12:00",
+  "priceRange": "$$"
+}
+</script>
+
+
 </head>
 
 <body class="index-page">
@@ -73,7 +95,7 @@
         <div class="container">
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-8 text-center">
-              <h2>Sua melhor pedalada é a nossa satisfação!</h2>
+              <h1>Sua melhor pedalada é a nossa satisfação!</h1>
               <p>Bicicletas, peças, vestuário, acessórios, sinalizações, transbike e muito mais!.</p>
               <a href="#about" class="btn-get-started">Conheça aqui</a>
             </div>
