--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   <!-- <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   -->
-  <link href="/favicon.png" rel="icon">
-  <link href="/apple-touch-icon.png" rel="apple-touch-icon">
-  
-
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
