--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             </div>
 
             <!-- Instagram Feed -->
-            <div class="sk-instagram-feed" data-embed-id="25650745"></div><script src="https://widgets.sociablekit.com/instagram-feed/widget.js" defer></script>
+            <!-- <div class="sk-instagram-feed" data-embed-id="25650745"></div><script src="https://widgets.sociablekit.com/instagram-feed/widget.js" defer></script> -->
             <!-- fim instagam feed-->
     
           </div>
