--- a/index.html
+++ b/index.html
@@ -534,7 +534,6 @@
 
             <!-- Instagram Feed -->
             <div class="sk-instagram-feed mb-5" data-embed-id="25650745"></div>
-            <script src="https://widgets.sociablekit.com/instagram-feed/widget.js" defer></script>
             <!-- fim instagam feed -->
     
           </div>
@@ -1539,9 +1538,11 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/instagram-feed/widget.js" defer></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
 
 </body>
 
