--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
                   <h2>Não fique de fora!</h2>
                   <p class="lead">Acompanhe nossas redes sociais e esteja sempre atualizado sobre promoções, lançamentos e tendências. Conecte-se conosco e descubra em primeira mão tudo o que preparamos para quem curte bike!</p>
                   <div class="cta-buttons">
-                    <a href="https://www.instagram.com/pac_bikes/" target="_blank" class="btn btn-primary"><i class="bi bi-instagram"></i> Instagram</a>
-                    <a href="https://www.facebook.com/pontoamigodociclista/" target="_blank" class="btn btn-facebook"><i class="bi bi-facebook"></i> Facebook</a>
+                    <a href="https://www.instagram.com/pac_bikes/" target="_blank" class="btn btn-primary"><i class="bi bi-instagram" style="margin-right: 5px;"></i> Instagram</a>
+                    <a href="https://www.facebook.com/pontoamigodociclista/" target="_blank" class="btn btn-facebook"><i class="bi bi-facebook" style="margin-right: 5px;"></i> Facebook</a>
                   </div>
                 </div>
               </div>
