--- a/index.html
+++ b/index.html
@@ -533,7 +533,11 @@
             </div>
 
             <!-- Instagram Feed -->
-            <div class="sk-instagram-feed mb-5" data-embed-id="25650745"></div>
+            <!-- fonte:socialblekit  <div class="sk-instagram-feed mb-5" data-embed-id="25650745"></div> -->
+
+             <!-- Elfsight Instagram Feed | PAC Bikes -->
+            <script src="https://elfsightcdn.com/platform.js" async></script>
+            <div class="elfsight-app-8262909a-d7bf-4d44-bec6-29db6fca63e6" data-elfsight-app-lazy></div>
             <!-- fim instagam feed -->
     
           </div>
@@ -1538,7 +1542,7 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/instagram-feed/widget.js" defer></script>
+  <!-- Socialblekit <script src="assets/vendor/instagram-feed/widget.js" defer></script> -->
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
