--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Strive
-  * Template URL: https://bootstrapmade.com/strive-bootstrap-business-template/
-  * Updated: Sep 20 2025 with Bootstrap v5.3.8
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template Name: Basic One
+    * Updated: 10/fev/2026
+  * Author: Tiago Oliveira
+  * License: https://www.tioliveira.com.br/
   ======================================================== -->
 
 <script type="application/ld+json">
@@ -758,11 +757,7 @@
               <a href="https://wa.me/5551997078479">Designed by <b>Tiago Oliveira</b></a>
             </div>
             <div class="credits hide">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you've purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-              <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+              <!-- créditos -->
             </div>
           </div>
         </div>
