--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <ul>
           <li><a href="#hero" class="active">Início</a></li>
           <li><a href="#about">Sobre</a></li>
-          <li><a href="#call-to-action">Novidades!</a></li>
+          <li><a href="#Novidades">Novidades!</a></li>
           <li><a href="#features">Produtos e Serviços</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
@@ -425,7 +425,7 @@
 
 
         <!-- Call To Action Section Instagram -->
-        <section id="call-to-action" class="call-to-action section dark-background" style="padding: 0px 0;">
+        <section id="novidades" class="call-to-action section dark-background" style="padding: 0px 0;">
 
           <div class="container" data-aos="fade-up" data-aos-delay="100">
     
